@@ -1064,6 +1064,21 @@ MRREVIEWER = {Paula M. Machado Cruz Catarino},
        URL = {http://dx.doi.org/10.1109/TIT.2004.828104},
 }
 
+@incollection {bras-ns-codes,
+    AUTHOR = {Bras-Amor\'{o}s, Maria},
+     TITLE = {Numerical semigroups and codes},
+ BOOKTITLE = {Algebraic geometry modeling in information theory},
+    SERIES = {Ser. Coding Theory Cryptol.},
+    VOLUME = {8},
+     PAGES = {167--218},
+ PUBLISHER = {World Sci. Publ., Hackensack, NJ},
+      YEAR = {2013},
+   MRCLASS = {94B27 (94B35)},
+  MRNUMBER = {3288285},
+MRREVIEWER = {John B. Little},
+       DOI = {10.1142/9789814335768_0005},
+       URL = {https://doi.org/10.1142/9789814335768_0005},
+}
 
 @article {A-A-GS,
 	AUTHOR = {Abbas, A. and Assi, A. and García-Sánchez, P. A.},
