@@ -293,6 +293,16 @@ DeclareOperation("NextElementOfNumericalSemigroup",[IsInt,IsNumericalSemigroup])
 DeclareOperation("DivisorsOfElementInNumericalSemigroup",[IsNumericalSemigroup,IsInt]);
 DeclareOperation("DivisorsOfElementInNumericalSemigroup",[IsInt,IsNumericalSemigroup]);
 
+#########################################################################
+##
+#F NumericalSemigroupByNuSequence(NuSeq)
+## Given a nu-sequence, compute the semigroup asociated to it.
+## Based on the code by Jorge Angulo, inspired in 
+## - Bras-Amorós, Maria Numerical semigroups and codes. 
+## Algebraic geometry modeling in information theory, 167–218, 
+## Ser. Coding Theory Cryptol., 8, World Sci. Publ., Hackensack, NJ, 2013
+#########################################################################
+DeclareGlobalFunction("NumericalSemigroupByNuSequence");
 
 #############################################################################
 ##
